# Adalight

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  README.md  README.ru.md  daemon.sh  installer.iss  main.py  plugins-index.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
adalight/: __init__.py  audio.py  autostart.py  cli.py  config.py  device.py  effects.py  engine.py  events.py  geometry.py  i18n.py  schedule.py  transports.py  updates.py  whatsnew.py
adalight/capture/: __init__.py  base.py  mss_backend.py  wayland.py  windows.py
adalight/gui/: __init__.py  anim.py  flash_picker.py  gradient.py  icons.py  main_window.py  notification_settings.py  plugin_manager_window.py  plugin_settings.py  preview.py  theme.py  wizard.py
adalight/locales/: __init__.py  en.py
adalight/plugins/: __init__.py  base.py  catalog.py  manager.py
adalight/plugins/builtin/: __init__.py  capture.py  effects_lamp.py  (+3 more)
docs/: CORE-AND-MODS.md  PLUGINS.md
examples/locales/: en.py
examples/plugins/: break_reminder.py  notification_logger.py  plasma_effect.py
firmware/: README.md
firmware/Gyver_Ambilight/: Gyver_Ambilight.ino
scripts/: make_icon.py  release_notes.py
tests/: conftest.py  test_autostart.py  test_capture.py  test_config.py  test_device.py  test_effects.py  test_engine.py  test_events.py  test_geometry.py  test_i18n.py  test_i18n_coverage.py  test_plugins.py  test_ports.py  test_release_notes.py  test_schedule.py  test_transports.py  test_updates.py  test_whatsnew.py  test_wled.py
